finish the english version

--- a/fonctions.ipynb
+++ b/fonctions.ipynb
@@ -369,14 +369,14 @@
     }
    ],
    "source": [
-    "def ma_nouvelle_fonction(*args, **kwargs):\n",
+    "def my_new_function(*args, **kwargs):\n",
     "    for i, arg in enumerate(args):\n",
     "        print(\"argument simple #{}: {}\".format(i, arg))\n",
     "        \n",
     "    for key, value in kwargs.items():\n",
     "        print(\"nom du paramètre: {}, valeur du paramètre: {}\".format(key, value))\n",
     "\n",
-    "ma_nouvelle_fonction('salut', 9, True, jack=\"Huncho\", mon_statut=12)\n"
+    "my_new_function('salut', 9, True, jack=\"Huncho\", mon_statut=12)\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -406,7 +406,7 @@
    "outputs": [
     {
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-12-4af83d8f2478>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    ma_nouvelle_fonction(mon_statut=\"très bien\", 9, 12, [], \"salut\")\u001b[0m\n\u001b[1;37m                                                 ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m positional argument follows keyword argument\n"
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-12-4af83d8f2478>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    my_new_function(mon_statut=\"très bien\", 9, 12, [], \"salut\")\u001b[0m\n\u001b[1;37m                                                 ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m positional argument follows keyword argument\n"
      ],
      "ename": "SyntaxError",
      "evalue": "positional argument follows keyword argument (<ipython-input-12-4af83d8f2478>, line 2)",
@@ -415,7 +415,7 @@
    ],
    "source": [
     "try:\n",
-    "    ma_nouvelle_fonction(mon_statut=\"très bien\", 9, 12, [], \"salut\")\n",
+    "    my_new_function(mon_statut=\"très bien\", 9, 12, [], \"salut\")\n",
     "except SyntaxError as e:\n",
     "    print(str(e))"
    ],
