terminer la version francaise avant révision

--- a/functions/functions.ipynb
+++ b/functions/functions.ipynb
@@ -9,7 +9,7 @@
     "> Functions are a very important part of Python. We can use them to create general, configurable and repeatable pieces\n",
     ">of code. In this tutorial, we will explore the syntax and the features of Python's functions. We will also learn how\n",
     ">to use them and what are good practices associated to Python functions. In previous tutorials, we already saw few\n",
-    ">functions like ```print(), len() ...   ```"
+    ">functions like ```print(), len() ...   ```\n"
    ],
    "metadata": {
     "collapsed": false
@@ -57,7 +57,7 @@
     "```\n",
     "\n",
     "> So, you can choose any name that does not contain any funky characters. Only the underscore, letters and numbers \n",
-    ">are allowed. Also not that you may not start your function with a number. The parameters are surrounded by \n",
+    ">are allowed. Also note that you may not start your function with a number. The parameters are surrounded by \n",
     ">parenthesis and are the inputs to your function. You might have no parameters just like you might have 10. The \n",
     ">function body is split from the definition line (called the function signature) by indentation. In Python, it is \n",
     ">good practice to give your function good lengthy precise names. The following is a good example: \n",
@@ -66,7 +66,8 @@
     "    ...\n",
     " ```\n",
     " \n",
-    " > It is important to notice the colon after the list of parameters. "
+    " > It is important to notice the colon after the list of parameters. \n",
+    " "
    ],
    "metadata": {
     "collapsed": false
@@ -161,9 +162,7 @@
     "import random\n",
     "\n",
     "def my_abs(input_number):\n",
-    "    if input_number < 0:\n",
-    "        return input_number * -1\n",
-    "    return  input_number\n",
+    "    pass\n",
     "\n",
     "# generate 20 random numbers from -100 to 100\n",
     "test_numbers = random.sample(range(-100, 100), 20)\n",
@@ -185,7 +184,7 @@
     "## Return Values\n",
     "> Once again, Python offers us a lot of options, this time for return values. Just keep in mind, we don't have to return\n",
     ">anything, it is optional. If we don't specify any return values, the value ```None``` is returned. You also might want\n",
-    ">to use the ```return``` keyword in order to stop your function following a conditional statement."
+    ">to use the ```return``` keyword in order to stop your function following a conditional statement.\n"
    ],
    "metadata": {
     "collapsed": false
@@ -236,7 +235,7 @@
    "source": [
     "> We can return multiple values at once from a function, they will automatically take the shape of a tuple. This can \n",
     ">be very useful, but keep in mind that it is generally considered bad python practice to return multiple values from \n",
-    ">one single function."
+    ">one single function.\n"
    ],
    "metadata": {
     "collapsed": false
@@ -335,11 +334,7 @@
    "outputs": [],
    "source": [
     "def unique_elements(input_list):\n",
-    "    uniques = []\n",
-    "    for el in input_list:\n",
-    "        if el not in uniques:\n",
-    "            uniques.append(el)\n",
-    "    return uniques, len(uniques) / len(input_list)\n",
+    "    pass\n",
     "\n",
     "\n",
     "ans1 = unique_elements([6,13,15,13,67,1,1,1,1])\n",
@@ -359,10 +354,10 @@
    "cell_type": "markdown",
    "source": [
     "## Parameters and Default Parameters\n",
-    "> There exists two types of parameters in python, required parameters, and default/keyword parameters. \n",
-    "> I might interchange arguments and parameters when I talk, as the disctinction is not very rigourous. However, they \n",
+    "> There exist two types of parameters in python, required parameters, and default/keyword parameters. \n",
+    "> I might interchange arguments and parameters when I talk, as the distinction is not very rigorous. However, they \n",
     ">have slightly different meanings as an argument refers to the VALUE passed to the function while a parameter refers \n",
-    ">to the VARIABLE passed to a function."
+    ">to the VARIABLE passed to a function.\n"
    ],
    "metadata": {
     "collapsed": false
@@ -417,9 +412,9 @@
     "    fct_body\n",
     "```\n",
     "> Args is a diminutive for \"arguments\" while kwargs is a diminutive for \"keyword arguments\". Args is used to collect\n",
-    "> an arbitrary numbers of required parameters while kwargs is used the same way for optional keywords. Keep in the \n",
+    "> an arbitrary number of required parameters while kwargs is used the same way for optional keywords. Keep in the \n",
     ">mind that these \"required\" parameters are totally optional as well. It' just that in the current context, they have \n",
-    ">the same form. Let's analyze how the \"args\" and \"kwargs\" work. "
+    ">the same form. Let's analyze how the \"args\" and \"kwargs\" work. \n"
    ],
    "metadata": {
     "collapsed": false
@@ -459,8 +454,8 @@
    "cell_type": "markdown",
    "source": [
     "> Quickly, I am sure you all noticed the asterisk and the double asterisks before the args and the kwargs \n",
-    ">parameters. These are the packing and unpacking operators, the single asterisks is used for iterators such as lists \n",
-    ">and tuples while the second is used for dictionaries-like types."
+    ">parameters. These are the packing and unpacking operators, the single asterisk is used for iterators such as lists \n",
+    ">and tuples while the doublle is used for dictionaries-like types.\n"
    ],
    "metadata": {
     "collapsed": false
@@ -563,7 +558,7 @@
    "source": [
     "## Docstrings\n",
     "> It is widely known that reading code if often much more difficult that writing it. Eventually, your code will be \n",
-    ">read by other people and will create a real impact. Try to make the life of these people as good as possible. The \n",
+    ">read by other people and will create a real impact. Try to make the life of these people as well as possible. The \n",
     ">first important trick is to write long and detailed variable and function names. Try to write as few comments as \n",
     ">possible.   \n",
     ">Where you want to describe the logic of your program is in the function's docstring. The docstring is a \n",
@@ -600,7 +595,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "> Docstrings are specified by long strings just after a function's signatrue.\n"
+    "> Docstrings are specified by long strings just after a function's signature.\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -668,15 +663,6 @@
     "    # (\"pass\" is a keyword that does literally nothing. We used it as a placeholder\n",
     "    # because after we begin a code block, Python requires at least one line of code)\n",
     "    pass\n",
-    "\n",
-    "def round_to_two_places(num):\n",
-    "    \"\"\"Return the given number rounded to two decimal places. \n",
-    "    \n",
-    "    >>> round_to_two_places(3.14159)\n",
-    "    3.14\n",
-    "    \"\"\"\n",
-    "    return round(num, 2)\n",
-    "    \n",
     "\n",
     "assert round_to_two_places(3.14159) == 3.14\n",
     "assert round_to_two_places(0) == 0 \n",
@@ -773,8 +759,7 @@
    "cell_type": "markdown",
    "source": [
     "> So, why was the value of dummy_var still 99 after we supposedly modified it to -2. Why is this so? The reason is we\n",
-    "> are actually defining dummy_var locally instead of modifying its global value. Notice:\n",
-    "\n"
+    "> are actually defining dummy_var locally instead of modifying its global value. Notice:\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -810,7 +795,7 @@
    "cell_type": "markdown",
    "source": [
     "> Okay, so what if I really want to modify the value of dummy_var inside our function? I need to use the global \n",
-    ">keyword."
+    ">keyword.\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -857,14 +842,7 @@
     "a_func()\n",
     "print(a_var, '[ a_var outside a_func() ]')\n",
     "```\n",
-    "> See the solution in the answer sheet.\n",
-    "\n",
-    "Answer: global value [ a_var inside a_func() ]  \n",
-    "global value [ a_var outside a_func() ]\n",
-    "\n",
-    "Because we call a_func() first, which is supposed to print the value of a_var. Now, a_var is not locally defined, so \n",
-    "it looks up one level up and prints the global value of a_var. Then, the second print obviously prints the global \n",
-    "value of a_var"
+    "> See the solution in the answer sheet.\n"
    ],
    "metadata": {
     "collapsed": false,
