Ajouter le solutionnaire du cours des fonction en francais

--- a/functions/fonctions.ipynb
+++ b/functions/fonctions.ipynb
@@ -140,8 +140,8 @@
    "source": [
     "> Comme dans l'exemple précédent, les fonctions peuvent appeler d'autres fonctions sans problème. Les fonctions\n",
     "peuvent également prendre d'autres fonctions comme arguments et retourner d'autres fonctions. Très polyvalent!\n",
-    "### Exercice!\n",
-    "> Écriver une fonction calculant la valeur absolue de quelconques nombres."
+    "### Exercice !\n",
+    "> Écrivez une fonction calculant la valeur absolue de quelconques nombres."
    ],
    "metadata": {
     "collapsed": false,
@@ -178,8 +178,8 @@
    "cell_type": "markdown",
    "source": [
     "## Valeurs de retours\n",
-    "> Nous avons beaucoup d'options en ce qui concerne les valeurs de retours en Python. À propri, nous n'avons pas besoin\n",
-    "de retourner quoi que ce soit. Dans ce cas la, la valeur ```None``` est automatiquement retournée.\n"
+    "> Nous avons beaucoup d'options en ce qui concerne les valeurs de retours en Python. À priori, nous n'avons pas besoin\n",
+    "de retourner quoi que ce soit. Dans ce cas-là, la valeur ```None``` est automatiquement retournée.\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -232,8 +232,8 @@
    "cell_type": "markdown",
    "source": [
     "> Nous pouvons retourner plusieurs valeurs qui prendront la forme d'un tuple en sortant. Cela peut s'avérer très utile,\n",
-    "mais prenez conscience que c'est considéré comme une mauvaise pratique en générale de retourner plusieurs valeurs\n",
-    "d'un seule fonction."
+    "mais prenez conscience que c'est considéré comme une mauvaise pratique en général de retourner plusieurs valeurs\n",
+    "d'une seule fonction.\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -321,9 +321,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Exercise !\n",
-    "> Écriver une fonction qui prend une liste et retourne une autre liste avec les éléments unique de la première liste\n",
-    "ainsi que la proportion d'éléments unique trouvée dans la liste originale sur ses éléments totaux."
+    "### Exercice !\n",
+    "> Écriver une fonction qui prend une liste et retourne une autre liste avec les éléments uniques de la première liste\n",
+    "ainsi que la proportion d'éléments unique trouvée dans la liste originale sur ses éléments totaux.\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -358,7 +358,7 @@
    "cell_type": "markdown",
    "source": [
     "## Paramètres et paramètres par défaut\n",
-    "> Il existe deux types de paramètres en Python, les paramètres optionnels et les paramètres obligatoirs."
+    "> Il existe deux types de paramètres en Python, les paramètres optionnels et les paramètres obligatoires."
    ],
    "metadata": {
     "collapsed": false,
@@ -401,7 +401,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "> En lisant du code python, vous allez fréquemment tomber sur les mot-clés \"args\" et \"kwargs\" souvent spécifiés de \n",
+    "> En lisant du code python, vous allez fréquemment tomber sur les mots-clés \"args\" et \"kwargs\" souvent spécifiés de \n",
     "la manière suivante.\n",
     "```\n",
     "def ma_fonction(*args, **kwargs):\n",
@@ -409,9 +409,9 @@
     "```\n",
     "> Args est un diminutif pour \"Arguments\" tandis que kwargs est un diminutif pour \"Keywords arguments\". Args est utilisé \n",
     "pour l'équivalent des arguments obligatoires tandis que kwargs est utilisé pour l'équivalent des keywords optionnels. Je\n",
-    "dis l'équivalent puisque tous args est totalement optionnel également, mais ses arguments ont la forme des arguments\n",
-    "obligatoires vu précédemment dans le sens qu'il non pas la forme (key=value).Dans le fond, args et kwargs\n",
-    "sont utilisés afin d'avoir des fonctions plus polyvalentes qui prennent virtuellement n'importe quoi comme entrant. "
+    "dis l'équivalent puisque tous args sont totalement optionnels également, mais ses arguments ont la forme des arguments\n",
+    "obligatoires vus précédemment dans le sens qu'il non pas la forme (key=value).Dans le fond, args et kwargs\n",
+    "sont utilisés afin d'avoir des fonctions plus polyvalentes qui prennent virtuellement n'importe quoi comme entrant. \n"
    ],
    "metadata": {
     "collapsed": false,
@@ -531,7 +531,7 @@
     "des ```docstrings``` comme description de ses fonctions à la place.  \n",
     "> Donc les docstrings sont utilisés afin de décrire la logique et l'utilité d'une fonction. Les docstrings résument également\n",
     "les paramètres ainsi que les valeurs de retour de la fonction en question. Ensuite, vous pouvez utiliser la fonction\n",
-    "```help()``` afin de retrouver la doctstring d'une fonction. Vous pouvez utiliser les docstrings afin de génerer un\n",
+    "```help()``` afin de retrouver la doctstring d'une fonction. Vous pouvez utiliser les docstrings afin de générer un\n",
     "readthedocs en utilisant sphynx. Le lien suivant est un exemple de documentation générer à partir de docstrings.  \n",
     " https://lifelines.readthedocs.io/en/latest/\n",
     " "
@@ -566,8 +566,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "> Les docstrings sont spécifiés par des longues strings suivant une signature de fonction/\n",
-    "\n"
+    "> Les docstrings sont spécifiés par des longues strings suivant une signature de fonction.\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -608,8 +607,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Exercise!\n",
-    "> Completer la fonction suivante avec les instructions de la docstring. INDICE: Python a une fonction `round`"
+    "### Exercice !\n",
+    "> Compléter la fonction suivante avec les instructions de la docstring. INDICE: Python a une fonction `round`"
    ],
    "metadata": {
     "collapsed": false
@@ -644,10 +643,10 @@
    "cell_type": "markdown",
    "source": [
     "## Scopes global et local\n",
-    "> Entrons dans un sujet un peu plus technqiue en parlant brièvement des scopes en Python. Cette section pourrait vous\n",
+    "> Entrons dans un sujet un peu plus technique en parlant brièvement des scopes en Python. Cette section pourrait vous\n",
     "sauver beaucoup de temps lorsque vous allez debbuger votre code dans le futur alors porter attention!  \n",
-    "> Commencons en définissant et en comprenant les scopes. Un scope est essetiellement un objet de la forme d'un dictionnaire \n",
-    "contenant les variables ainsi que leurs valeurs pour une section de code.\n"
+    "> Commençons en définissant et en comprenant les scopes. Un scope est essentiellement un objet de la forme d'un dictionnaire \n",
+    "contenant les variables ainsi que leur valeur pour une section de code.\n"
    ],
    "metadata": {
     "collapsed": false
@@ -681,8 +680,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "> Prener conscience que le scope local prend précédence sur le scope global. Maintenant, définissons une variable global\n",
-    "qui sera modifié dans le corps d'une fonction.\n"
+    "> Prenez conscience que le scope local prend précédence sur le scope global. Maintenant, définissons une variable globale\n",
+    "qui sera modifiée dans le corps d'une fonction.\n"
    ],
    "metadata": {
     "collapsed": false
@@ -712,8 +711,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "> Alors, pourquoi est ce que la valeur de dummy_var est-elle encore de 99 après que que l'on ait supposément modifié? \n",
-    "La raison est qu'on a en fait définit une dummy_var local au lieu de modifier la dummy_var global. Et voila:\n"
+    "> Alors, pourquoi est-ce que la valeur de dummy_var est-elle encore de 99 après que que l'on ait supposément modifié? \n",
+    "La raison est qu'on a en fait défini une dummy_var locale au lieu de modifier la dummy_var globale. Et voilà:\n"
    ],
    "metadata": {
     "collapsed": false
@@ -743,10 +742,10 @@
   {
    "cell_type": "markdown",
    "source": [
-    "> Voila! Nous pouvons manipuler les variables globales dans nos fonction, mais garder en tête que c'est génerallement\n",
-    "pas une considéré de la bonne pratique de le faire en Python...\n",
+    "> Voilà! Nous pouvons manipuler les variables globales dans nos fonctions, mais garder en tête que ce n'est génerallement\n",
+    "pas  considéré de la bonne pratique de le faire en Python... \n",
     ">\n",
-    "### Exercise!\n",
+    "### Exercice !\n",
     "> Qu'imprime le code suivant?\n",
     "```\n",
     "a_var = 'global variable'\n",
