added english version

--- a/OOP/oop_fr.ipynb
+++ b/OOP/oop_fr.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "source": [
     "### Languages supportant la programmation orientée objet\n",
-    "La plupart des languages modernes supportent la POO. Le language emblématique de ce paradigme est\n",
+    "La plupart des langages modernes supportent la POO. Le language emblématique de ce paradigme est\n",
     "Java qui fonctionne obligatoirement avec des classes (la base de la POO).\n",
     "Python ne permet pas d'utiliser l'ensemble des fonctionnalités reliées à la POO offert par Java.\n",
     "Toutefois, les concepts indispensables sont tous présents."
@@ -36,11 +36,11 @@
    "cell_type": "markdown",
    "source": [
     "### Pourquoi utilisé la POO?\n",
-    "La POO est née dans des languages procédurals comme manière facile d'organiser des structures plus complexes.\n",
+    "La POO est née dans des langages procédurales comme manière facile d'organiser des structures plus complexes.\n",
     "Ces princales forces sont:\n",
     "* enforcer la modularité\n",
     "* enforcer la discipline\n",
-    "* enforcer la visiblité de différentes parties du code\n",
+    "* enforcer la visibilité de différentes parties du code\n",
     "\n",
     "Plus spécifiquement, la modularité est la séparation du code en sous-catégorie permettant\n",
     "de mieux organiser la structure.\n",
@@ -60,8 +60,8 @@
    "source": [
     "### La POO en Python\n",
     "#### Classes\n",
-    "Noter la syntaxe propre à Python. Nous utilison le mot-clé `class` avant de nommer notre classe.\n",
-    "Noter le mot-clé `pass` qui sert uniquement à délimiter du code vide.\n",
+    "Noter la syntaxe propre à Python. Nous utilisons le mot-clé `class` avant de nommer notre classe.\n",
+    "Noter le mot-clé `pass` qui sert uniquement à délimiter du code vide (à cause de l'indentation).\n",
     "Lorsque nous associons une classe à une variable nous _instancions_ cette classe sous forme d'objet.\n",
     "En d'autres mots, les classes sont l'équivalent de plan et les objets sont des réalisations des plans."
    ],
@@ -106,7 +106,7 @@
     "Fonctions définies dans une classe == méthode.\n",
     "Les méthodes débutant par deux barres de soulignements sont appelées `dunder` ou `magic` méthodes.\n",
     "Dans la cellule suivante, la méthode `__init__` est le constructeur.\n",
-    "Cette méthode est automatiquement appelé lorsque la classe est instanciée."
+    "Cette méthode est automatiquement appelée lorsque la classe est instanciée."
    ],
    "metadata": {
     "collapsed": false,
@@ -145,7 +145,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Dans la cellule suivant, nous utilisons deux autres `magic methods`.\n",
+    "Dans la cellule suivante, nous utilisons deux autres `magic methods`.\n",
     "`__str__` est utilisée lorsque nous _castons_ notre objet en string.\n",
     "(par exemple, dans le cas suivant le `f-string` appelle implicitement\n",
     "la fonction `__str__`.\n",
@@ -207,7 +207,7 @@
     "#### Qu'est que le mot-clé `self`??\n",
     "Vous avez sans doute remarqué le mot-clé `self` comme premier argument des\n",
     "méthodes de l'exemple précédent. En fait, ce n'est pas un mot-clé, mais plutôt\n",
-    "une convention. Cette argument réfère à la classe en soit."
+    "une convention. Cet argument réfère à la classe en soit."
    ],
    "metadata": {
     "collapsed": false,
@@ -261,7 +261,7 @@
    "cell_type": "markdown",
    "source": [
     "### Exercice 1\n",
-    "Créer une classe avec deux arguments de type `int`, un constructeur les initilialisant et une méthode les additionants."
+    "Créer une classe avec deux arguments de type `int`, un constructeur les initialisant et une méthode les additionant."
    ],
    "metadata": {
     "collapsed": false,
@@ -416,15 +416,15 @@
    "cell_type": "markdown",
    "source": [
     "Comme démontré dans l'exemple précédent, les méthodes de classes sont souvent utilisées afin\n",
-    "d'instancier des classes de différentes façons. Içi, nous parlons du _factory design pattern_\n",
+    "d'instancier des classes de différentes façons. Ici, nous parlons du _factory design pattern_\n",
     "de l'ingénierie logicielle.\n",
     "\n",
     "----------------------------------------------------------------\n",
     "### Variables privées versus variables publiques\n",
-    "Dans de nombreux languages de programmation, il existe plusieurs _modifiers_ de visibilité des variables et fonctions\n",
+    "Dans de nombreux langages de programmation, il existe plusieurs _modifiers_ de visibilité des variables et fonctions\n",
     "dans les classes. Normalement, on retrouve au moins les _modifiers private et public_. Nous les utilisons pour\n",
     "empêcher certaines méthodes et variables d'être utilisées ailleurs, où elles ne sont pas désirées.\n",
-    "Malheureuresement, python ne supporte pas vraiment ces fonctionnalités."
+    "Malheureusement, python ne supporte pas vraiment ces fonctionnalités."
    ],
    "metadata": {
     "collapsed": false,
@@ -569,7 +569,7 @@
    "execution_count": 12,
    "outputs": [],
    "source": [
-    "# exerice 2\n"
+    "# exercice 2\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -709,25 +709,25 @@
   {
    "cell_type": "markdown",
    "source": [
-    "oulalala, il y énormement à décortiquer dans la cellule précédente, allons-y tranquillement.\n",
+    "oulalala, il y énormément à décortiquer dans la cellule précédente, allons-y tranquillement.\n",
     "1.  La classe `EuclideanPoint` implémente le patron de conception `__slots__` qui remplace\n",
     "    le dictionnaire normal utilisé pour enregistrer les attributs associés à une classe.\n",
-    "2.  La classe `EuclideanPoint` utilise un méthode de classe pour aisément instancier\n",
+    "2.  La classe `EuclideanPoint` utilise une méthode de classe pour aisément instancier\n",
     "    un point par défaut.\n",
     "3. La classe `NotEnoughGasException` extensionne la classe Exception de python. Ceci permet d'agir comme une Exception\n",
     "    normale mais avec un nom différent, nous permettant de l'isoler lors de la résolution d'exception.\n",
-    "4. La classe `Vehicle` est la classe _parente_ de `Bicycle` et `Car`, c'est à dire que ces deux classes sont\n",
+    "4. La classe `Vehicle` est la classe _parente_ de `Bicycle` et `Car`, c'est-à-dire que ces deux classes sont\n",
     "    effectivement des `Vehicle` -- et donc offre l'ensemble des fonctionnalités de `Vehicle` -- mais en offrant davantage\n",
     "    de méthodes ou d'attributs. De plus les deux classes héritant de `Vehicle` _ override_  la méthode `move` de la classe\n",
     "    `Vehicle`.\n",
-    "5. Les deux classes _enfant_ utilise le mot-clé `super` ce qui a pour effet de pouvoir appeler les\n",
+    "5. Les deux classes _enfant_ utilisent le mot-clé `super` ce qui a pour effet de pouvoir appeler les\n",
     "    méthodes de la classe parent.\n",
     "\n",
     "Comment fonctionne l'héritage ? En python, un mécanisme appelé le `Method Resolution Order`  résout l'ordre de résolution\n",
-    "des méthodes. Par exemple, la méthode `move` est implémentée dans l'ensemble des classes, donc quel méthode `move` devrait\n",
-    "être appelée? Simplement, la méthode la plus près de la classe en question sera appelé.\n",
+    "des méthodes. Par exemple, la méthode `move` est implémentée dans l'ensemble des classes, donc quelle méthode `move` devrait\n",
+    "être appelée? Simplement, la méthode la plus près de la classe en question sera appelée.\n",
     "Donc si j'utilise `car.move()`, la méthode `move` la plus près de la classe `Car` est celle définit dans la classe `Car`.\n",
-    "Si j'utilise `car.get_position()`, la méthode `get_position` n'est pas définit dans la classe `Car`, donc la méthode la plus\n",
+    "Si j'utilise `car.get_position()`, la méthode `get_position` n'est pas définie dans la classe `Car`, donc la méthode la plus\n",
     "proche est dans la classe `Vehicle`."
    ],
    "metadata": {
@@ -741,7 +741,7 @@
    "cell_type": "markdown",
    "source": [
     "### Exercice 3\n",
-    "Définisser une classe parent `Shape` avec la méthode `get_area, get_parameter`.\n",
+    "Définisser une classe parent `Shape` avec les méthodes `get_area, get_parameter`.\n",
     "Ensuite, défininisser les classes `Rectangle`, `Triangle`, `Square`, et `Circle` qui implémente les deux méthodes de\n",
     "leur classe parent. De plus, implémenter les fonctions `__str__, __repr__`  pour `Shape` et `__init__` pour\n",
     "les autres."
@@ -758,7 +758,7 @@
    "execution_count": 14,
    "outputs": [],
    "source": [
-    "# exercise 3"
+    "# exercice 3"
    ],
    "metadata": {
     "collapsed": false,
@@ -771,7 +771,7 @@
    "cell_type": "markdown",
    "source": [
     "----------------------------------\n",
-    "### Propriétés\n",
+    "### Propriétés (properties)\n",
     "Les objets peuvent avoir des propriétés à la place d'attributs."
    ],
    "metadata": {
@@ -825,8 +825,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Mais à quoi sert exactement les propriétés?\n",
-    "Bonne question, premièrement nous pouvons désormais enforcer des limites:"
+    "Mais à quoi servet exactement les propriétés?\n",
+    "Bonne question, premièrement nous pouvons désormais enforcer des limites lors de la définition d'un attribut:"
    ],
    "metadata": {
     "collapsed": false,
@@ -885,7 +885,7 @@
    "cell_type": "markdown",
    "source": [
     "De plus, si nous avons plusieurs dépendances à la classe Person, et ces dépendances utilisent\n",
-    "l'attribut `height`, nous pous modifier cet attribut sans conséquences pour le reste du code:"
+    "l'attribut `height`, nous pouvons modifier cet attribut sans conséquences pour le reste du code:"
    ],
    "metadata": {
     "collapsed": false,
@@ -1001,8 +1001,8 @@
     "sauvegarder des données comme attribut afin de simplifier les méthodes suivantes.\n",
     "Également, vous remarquerez que l'arbre est instancié avec la méthode `__build`. Comme nous l'avons vu\n",
     "plus tôt, cette méthode n'est pas directement accessible hors de la classe. C'est une méthode\n",
-    "destinée pour construire l'arbre, d'autres méthodes ne commencant pas par deux barres de soulignement\n",
-    "sont ensuite accessible aux usagers tels que la suivante:\n",
+    "destinée pour construire l'arbre, d'autres méthodes ne commençant pas par deux barres de soulignement\n",
+    "sont ensuite accessibles aux usagers tels que la suivante:\n",
     "```python\n",
     "def query(self, x, k=1, eps=0, p=2, distance_upper_bound=np.inf):\n",
     "    \"\"\"\n",
@@ -1011,9 +1011,9 @@
     "```\n",
     "En fait, la méthode `query` est intéressante puisqu'elle est représentative d'un mécanisme fréquemment\n",
     "utilisé par les développeurs: de séparer la logique de la manipulation des arguments. Dans ce cas,\n",
-    "la méthode `query` sert à valider que les arguments fournient par l'usager sont valides. Ensuite, la méthode\n",
+    "la méthode `query` sert à valider que les arguments fournis par l'usager sont valides. Ensuite, la méthode\n",
     "`__query` s'occupe de réellement effectuer l'opération.\n",
-    "Une particularité intéressante de la classe KDTree est qu'elle contient elle-même d'autres classe:\n",
+    "Une particularité intéressante de la classe KDTree est qu'elle contient elle-même d'autres classes:\n",
     "```python\n",
     "class node(object):\n",
     "    def __lt__(self, other):\n",
